# buscador-libros-dj-ng

./: README.md
back/: .gitignore  pyproject.toml
back/book_api/book_api/: settings.py  urls.py
back/book_api/books/: models.py  serializers.py  urls.py  views.py
back/book_api/books/views/: __init__.py  detail_views.py  finder_views.py  list_create_views.py
front/: .gitignore  angular.json  package.json
